syntax = "proto3";

package user;

import "donationReceiver.proto";
import "google/protobuf/timestamp.proto";

message Email {
  string email = 1;
}

message Id {
  string uid = 1;
}

message CreateUserDto {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
}

message UserProfiles {
  User user = 1;
  donationReceiver.DonationReceiver donationReceiver = 2;
}

message Empty {};

message Users {
  repeated User users = 1;
}

message User {
  string uid = 1;
  string firstName = 2;
  string lastName = 3;
  string dob = 4;
  string address = 5;
  string stripeCustomerId = 6;
  string avatarUrl = 7;
  string email = 8;
  string password = 9;
}

message GetUserProfilesRequest {
  string uid = 1;
}

message GetUserProfilesResponse {
  User userProfile = 1;
  donationReceiver.DonationReceiver donationReceiverProfile = 2;
}

message UpdateUserProfileRequest {
  string uid = 1;
  string firstName = 2;
  string lastName = 3;
  string dob = 4;
  string address = 5;
  string stripeCustomerId = 6;
  string avatarUrl = 7;
  donationReceiver.FileObject avatar = 8;
}
